--- a/TrabajoFinCiclo/HELIOS/index.html
+++ b/TrabajoFinCiclo/HELIOS/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div>
                     <label for="reloj">¿Quieres los resultados en hora local?: </label> 
-                    <p>(Se entiende que tu reloj se ajusta automáticamente)</p> <br> 
+                    <p>(Se entiende que en ese caso tu reloj se ajusta automáticamente)</p> <br> 
                     <select id="local">
                         <option name="reloj" value=false>No</option>
                         <option name="reloj" value=true>Sí</option>
