--- a/TrabajoFinCiclo/HELIOS/index.html
+++ b/TrabajoFinCiclo/HELIOS/index.html
@@ -148,8 +148,7 @@
                         <option name="paisOrigen" value="Falkland Islands">Falkland Islands</option>
                         <option name="paisOrigen" value="Fiji">Fiji</option>
                         <option name="paisOrigen" value="Finland">Finland</option>
-                        <option name="paisOrigen" value="Former Yugoslav Republic of Macedonia">Former Yugoslav Republic of Macedonia
-                        </option>
+                        <option name="paisOrigen" value="Former Yugoslav Republic of Macedonia">Former Yugoslav Republic of Macedonia </option>
                         <option name="paisOrigen" value="France">France</option>
                         <option name="paisOrigen" value="French Guiana">French Guiana</option>
                         <option name="paisOrigen" value="French Polynesia">French Polynesia</option>
@@ -271,8 +270,7 @@
                         <option name="paisOrigen" value="Solomon Islands">Solomon Islands</option>
                         <option name="paisOrigen" value="Somalia">Somalia</option>
                         <option name="paisOrigen" value="South Africa">South Africa</option>
-                        <option name="paisOrigen" value="South Georgia and the South Sandwich Islands">South Georgia and the South Sandwich
-                            Islands</option>
+                        <option name="paisOrigen" value="South Georgia and the South Sandwich Islands">South Georgia and the South Sandwich Islands</option>
                         <option name="paisOrigen" value="South Korea">South Korea</option>
                         <option name="paisOrigen" value="South Sudan">South Sudan</option>
                         <option name="paisOrigen" value="Spain">Spain</option>
@@ -519,8 +517,7 @@
                         <option name="paisDestino" value="Solomon Islands">Solomon Islands</option>
                         <option name="paisDestino" value="Somalia">Somalia</option>
                         <option name="paisDestino" value="South Africa">South Africa</option>
-                        <option name="paisDestino" value="South Georgia and the South Sandwich Islands">South Georgia and the South Sandwich
-                            Islands</option>
+                        <option name="paisDestino" value="South Georgia and the South Sandwich Islands">South Georgia and the South Sandwich Islands</option>
                         <option name="paisDestino" value="South Korea">South Korea</option>
                         <option name="paisDestino" value="South Sudan">South Sudan</option>
                         <option name="paisDestino" value="Spain">Spain</option>
